@@ -42,9 +42,8 @@ share {
 
   meta->prop->{start_url} = 'https://sourceforge.net/projects/mingw/files/Installer/mingw-get/';
 
-  requires 'Path::Tiny';
-  plugin 'Fetch::HTTPTiny';
-  plugin 'Decode::HTML';
+  plugin 'Download';
+  plugin 'Decode::Mojo';
   plugin 'Decode::SourceForge';
   plugin 'Extract' => 'zip';
 
@@ -70,7 +69,7 @@ share {
     
     $build->log("GET $mingw_get_url");
     
-    do {
+    {
       my $ret = $build->fetch($mingw_get_url);
       
       if(defined $ret->{content})
